packages/frontend/tests/type_errors/type_mismatch.nemo
global x : i32 = 10.0
